--- a/stock-trader/package.json
+++ b/stock-trader/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^12.2.2",
     "axios": "^0.21.0",
     "bootstrap": "^4.5.3",
+    "express": "^4.17.1",
     "p-map": "^4.0.0",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
@@ -42,7 +43,6 @@
   },
   "description": "Carlos Graybill",
   "main": "server.js",
-  "devDependencies": {},
   "author": "Carlos",
   "license": "ISC"
 }
