--- a/stock-trader/package.json
+++ b/stock-trader/package.json
@@ -15,6 +15,7 @@
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.0",
+    "sqlite3": "^5.0.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
@@ -44,5 +45,8 @@
   "description": "Carlos Graybill",
   "main": "server.js",
   "author": "Carlos",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^2.0.6"
+  }
 }
